# pyimager

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.html  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Makefile  conf.py  contributing.rst  contributors.rst  index.rst  installation.rst  make.bat  readme.rst  usage.rst
docs/source/: modules.rst  pyimager.rst
pyimager/: Untitled.ipynb  pyimager.py  reducolor.py
tests/: test_pyimager.py
