[tool.poetry]
name = "pyimager"
version = "0.1.0"
description = "pyimager contains functions to process and edit images"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
matplotlib = "^3.2.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
