[tool.poetry]
readme = "README.md"
homepage = "https://github.com/UBC-MDS/pyimager"
repository = "https://github.com/UBC-MDS/pyimager"
documentation = 'https:/pyimager.readthedocs.io'
name = "pyimager"
version = "1.1.5"
description = "pyimager contains functions to process and edit images"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
matplotlib = ">=3.2.0"
scipy = "^1.4.1"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.3"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
codecov = "^2.0.16"
python-semantic-release = ">=4.10.0"

[tool.semantic_release]
version_variable = "pyimager/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

